--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Your Blog
 SEOTitle: 祝立健的博客 | Zhulj Blog
 header-img: img/home-bg.jpg
 email: 153454219@qq.com
-description: "试试写下博客"
+description: "试试写博客"
 keyword: "祝立健"
 url: ""              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
@@ -12,8 +12,8 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
 RSS: false
-weibo_username:     祝立健
-zhihu_username:     银河的虫子
+# weibo_username:     祝立健
+# zhihu_username:     银河的虫子
 github_username:    galabug
 #twitter_username:  huxpro
 # facebook_username:  huxpro
@@ -69,7 +69,7 @@ ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "先用用看这个模板。"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/v1/galabug.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -82,8 +82,8 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "zhengqk Blog",
-        href: "zhengqk.com"
+        title: "郑乾坤的博客",
+        href: "http://www.zhengqk.com"
     }
 ]
 
