--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Your Blog
-SEOTitle: 祝立健的博客 | Zhulj Blog
+title: 祝立健的博客
+SEOTitle: 祝立健的博客
 header-img: img/home-bg.jpg
 email: 153454219@qq.com
 description: "试试写博客"
 keyword: "祝立健"
-url: ""              # your host, for absolute URL
+url: "https://galabug.github.io/"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
